# agentic-ai-and-you-web

./: .gitignore  README.md  build.py  index.html  pyproject.toml
.github/workflows/: deploy.yml
slides/: __init__.py  cli.py  markdown.py  model.py  parser.py  render.py
src/: main.js  shader.frag  slides.html  slides.md  style.css  template.html
